fix display movie page on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -85,6 +85,10 @@ footer {
 	.hidesmall{
 		display: none;
 	}
+  .halfsize {
+    height:50%;
+    width:50%;
+  }	
 }
 
 
